Actualice la logica del juego y el estilo

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -51,3 +51,13 @@
   color: white;
 
 }
+
+.tablaCantor td.sacada {
+  background-color: green;
+  color: white;
+}
+
+.tablaCantor td:not(.sacada) {
+  background-color: #ccc;
+  color: black;
+}
