Modifique cierta logica del juego y estilos

--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Segoe UI';
+}
+
 .boton {
   padding: 15px 25px;
   font-size: 24px;
@@ -60,4 +64,22 @@
 .tablaCantor td:not(.sacada) {
   background-color: #ccc;
   color: black;
+}
+
+.ultimaBalota{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 20px;
+    background-color: #e9e9e9;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.numeroBalota {
+  color: red;
+  font-size: 1.8em;
 }
